--- a/jade/options.jade
+++ b/jade/options.jade
@@ -1,4 +1,42 @@
-!!! 5
+doctype 5
 html
+  head
+    title Wikipedia Plus Options
+    link(rel='icon', href='/assets/image/favicon.1.png')
+    :stylus
+      body
+        font-family Helvetica, sans-serif
+      h1
+        color steelblue
+      input 
+        margin 10px
+        &[type="text"]
+          font-size 1em
+          border-radius 5px
+          border 2px solid steelblue
+          padding 5px
+          &:focus
+            outline none
+      button
+        font-size 1em
+        padding 5px
+        border-radius 5px
+      .foot
+        margin-top 20px
+        color #888
+        font-size 0.9em
+        a
+          color #444
+          text-decoration none
+          &:hover
+            color black
+
+      .trademark-legend
+        margin-top 10px
+        font-size 0.9em
   body
-      
+    h1 Wikipedia Plus Options
+    
+    .foot &copy; 2013 
+      a(href='http://twitter.com/falcondai', target='_blank') Falcon Dai
+      .trademark-legend Disclaimer: Wikipedia and its associated marks are official trademarks of the Wikimedia Foundation in the United States and other countries. These marks are being used under license by the Wikimedia Foundation. Wikipedia Plus Chrome Extension is not endorsed by or affiliated with the Wikimedia Foundation.
