--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ img.ext-popover-image {
   position: absolute;
   padding: 5px;
   border: 1px solid #ccc;
-  margin: 5px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
+  margin: 10px;
   z-index: 10;
   pointer-events: none;
 }
