--- a/jade/options.jade
+++ b/jade/options.jade
@@ -4,45 +4,110 @@ html
     title Options : Wikipedia Plus
     link(rel='icon', href='/assets/image/favicon.png')
     :stylus
+      theme = #007bb4
       body
-        font-family Helvetica, sans-serif
+        font-family Ubuntu, Helvetica, sans-serif
       h1
-        color steelblue
+        color theme
+      ul
+        padding 0
+      li
+        display block
+        list-style-type none
+      span
+        display inline-block
+        &.group
+          margin auto 20px
       input 
         margin 10px
+        vertical-align middle
         &[type="text"]
           font-size 1em
           border-radius 5px
-          border 2px solid steelblue
+          border 2px solid theme
           padding 5px
+          transition box-shadow 0.3s ease-in-out
           &:focus
+            box-shadow 0 0 10px rgba(theme, 0.8)
             outline none
+          &:disabled
+            background-color rgb(235, 235, 228)
+        &[type="range"]
+          width 50px
       button
         font-size 1em
         padding 5px
         border-radius 5px
+        margin-top 15px
       .foot
         margin-top 20px
         color #888
         font-size 0.9em
+      a
+        display inline-block
+        transition color 0.2s ease-in-out
+        color #444
+        text-decoration none
+        &:hover
+          color theme
+        &.disabled
+          color: #888 !important;
+      .actions
+        margin-top 50px
+        border-top 1px solid #888
         a
-          color #444
-          text-decoration none
-          &:hover
-            color black
+          margin 16px 32px 0px 0px
+      .actions>span
+        display inline-block
+      #social
+        display inline-block
+        transition -webkit-transform 0.3s ease-in-out
+        -webkit-transform perspective(300px) rotateX(90deg)
+        &>a
+          margin-top 0
+        &.show
+          -webkit-transform perspective(300px) rotateX(0deg)
+      .foot a
+        margin auto
+      #facebook:hover
+        color #3b579d
+      #twitter:hover
+        color #00aced
+      #gplus:hover
+        color #dd4b39
       .trademark-legend
-        margin-top 10px
-        font-size 0.9em
+        margin-top 30px
+        font-size 0.85em
   body
     h1 Options : Wikipedia Plus
     ul
-      li turn section titles into links
-      li enlarge images
-      li show snippet for Wikipedia links
+      li.zoom
+        input(type='checkbox')
+        | enlarge images
+        input(type='range', min=2, max=4, step=1, value=2)
+        span
+      li.snippet
+        input(type='checkbox')
+        | show snippets for linked Wikipedia articles
+      li.link
+        input(type='checkbox')
+        | turn section titles into links
+        
+    .actions
+      a(href='#')#ask ask a question
+      a(href='#')#suggest suggest a feature
+      a(href='#')#report report an issue
+      a(href='#')#rate rate this extension
+      span
+        a(href='#')#share recommend to friends
+        #social
+          a(href='#', target='_blank')#facebook facebook
+          a(href='#', target='_blank')#twitter twitter
+          a(href='#', target='_blank')#gplus google+
+      .foot &copy; 2013 
+        a(href='http://twitter.com/falcondai', target='_blank') Falcon Dai
 
-    .foot &copy; 2013 
-      a(href='http://twitter.com/falcondai', target='_blank') Falcon Dai
       .trademark-legend Disclaimer: Wikipedia and its associated marks are official trademarks of the Wikimedia Foundation in the United States and other countries. These marks are being used under license by the Wikimedia Foundation. Wikipedia Plus Chrome Extension is not endorsed by or affiliated with the Wikimedia Foundation.
 
-    script(href='/vendor/jquery.js')
-    script(href='/options.js')
+    script(src='/vendor/jquery.js')
+    script(src='/options.js')
