--- a/jade/options.jade
+++ b/jade/options.jade
@@ -78,6 +78,7 @@ html
       .trademark-legend
         margin-top 30px
         font-size 0.85em
+        color #aaa
   body
     h1 Options : Wikipedia Plus
     ul
